--- a/FaPA/GUI/Design/Styles/DataTemplates.xaml
+++ b/FaPA/GUI/Design/Styles/DataTemplates.xaml
@@ -25,8 +25,6 @@
                            IsSynchronizedWithCurrentItem="True"/>
     </DataTemplate>
 
-
-
     <DataTemplate x:Key="FatturaTemplate">
         <t1:Fattura />
     </DataTemplate>
@@ -37,6 +35,10 @@
                             GridItemSource="{Binding Path=DataContext.UserCollectionView, 
                                                      RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"/>
         </Border>
+    </DataTemplate>
+
+    <DataTemplate DataType="{x:Type a:DatiGeneraliDocumentoViewModel}">
+        <t1:DatiGeneraliDocumento />
     </DataTemplate>
 
     <DataTemplate DataType="{x:Type a:ScontoMaggiorazioneViewModel}">
