--- a/FaPA/GUI/Design/Templates/DatiGeneraliDocumento.xaml
+++ b/FaPA/GUI/Design/Templates/DatiGeneraliDocumento.xaml
@@ -5,6 +5,17 @@
              xmlns:enums="clr-namespace:FaPA.Core.FaPa">
     
     <UserControl.Resources>
+
+        <Style x:Key="MyFocusVisualStyte" >
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Border x:Name="FocusStyle" Background="#4433b4ed" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
         <Style TargetType="{x:Type TabItem}">
             <Setter Property="FontSize" Value="12"/>
             <Setter Property="FontWeight" Value="Bold"/>
@@ -72,6 +83,40 @@
                 </Setter.Value>
             </Setter>
         </Style>
+
+        <Style TargetType="{x:Type TabControl}">
+            <Setter Property="OverridesDefaultStyle" Value="True" />
+            <Setter Property="SnapsToDevicePixels" Value="True" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type TabControl}">
+                        <Grid KeyboardNavigation.TabNavigation="Local">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <TabPanel x:Name="HeaderPanel"
+                              Grid.Row="0"
+                              Panel.ZIndex="1"
+                              Margin="0,0,4,-1"
+                              IsItemsHost="True"
+                              KeyboardNavigation.TabIndex="1"
+                              Background="Transparent" />
+                            <Border x:Name="Border"
+                            Grid.Row="1"
+                            BorderThickness="2"
+                            CornerRadius="2"
+                            KeyboardNavigation.TabNavigation="Local"
+                            KeyboardNavigation.DirectionalNavigation="Contained"
+                            KeyboardNavigation.TabIndex="2"
+                            BorderBrush="LightGray">
+                                <ContentPresenter x:Name="PART_SelectedContentHost" Margin="4" ContentSource="SelectedContent" />
+                            </Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </UserControl.Resources>
 
     <Grid Margin="2,2,2,2">
@@ -95,58 +140,25 @@
 
         </StackPanel>-->
 
-        <GroupBox Grid.Row="0" Header="Dati generali documento "
+        <GroupBox Grid.Row="0" Header="Dati generali documento " Padding="4,4,4,4" Margin="4,4,4,4"
+                  FontSize="12" FontWeight="Bold"
                   Visibility="{Binding ElementName=infoPanel, Path=Visibility, Converter={StaticResource InvertVisibilityConverter}}" >
 
-            <TabControl TabStripPlacement="Top" HorizontalAlignment="Stretch" BorderBrush="#41020202">
-                <!--<TabControl.BitmapEffect>
-                    <DropShadowBitmapEffect Color="Black" Direction="270"/>
-                </TabControl.BitmapEffect>-->
-                <!--<TabControl.Resources>
-                    <Style TargetType="{x:Type TabItem}">
-                        <Setter Property="BorderThickness" Value="0"/>
-                        <Setter Property="Padding" Value="0" />
-                        <Setter Property="HeaderTemplate">
-                            <Setter.Value>
-                                <DataTemplate>
-                                    
-                                        <ContentPresenter>
-                                        
-                                            <ContentPresenter.Content>
-                                            <Border x:Name="grid" BorderThickness="1,1,1,0" BorderBrush="Black" CornerRadius="4,4,0,0" Margin="2,0">
-                                                <TextBlock Margin="4" FontSize="11" Text="{TemplateBinding Content}"/>
-                                            </Border>
-                                        </ContentPresenter.Content>
-                                            --><!--<ContentPresenter.LayoutTransform>
-                                                <RotateTransform Angle="270" />
-                                            </ContentPresenter.LayoutTransform>--><!--
+            <TabControl TabStripPlacement="Top" >
 
-                                    </ContentPresenter>
-
-
-                                    <DataTemplate.Triggers>
-                                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type TabItem}},Path=IsSelected}" Value="True">
-                                            <Setter TargetName="grid" Property="Background"  Value="DarkGray"/>
-                                        </DataTrigger>
-                                    </DataTemplate.Triggers>
-                                </DataTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </TabControl.Resources>-->
-                <TabControl.Background>
+                <!--<TabControl.Background>
                     <RadialGradientBrush Center="-0.047,0.553" GradientOrigin="-0.047,0.553" RadiusY="1.231" RadiusX="0.8">
                         <GradientStop Offset="1" Color="#06FFFFFF"/>
                         <GradientStop Color="#14FFFFFF"/>
                     </RadialGradientBrush>
-                </TabControl.Background>
+                </TabControl.Background>-->
                 
-                <TabItem Header="Dati generali" BorderBrush="#41020202">
+                <TabItem Header="Dati generali" >
 
                     <Grid Margin="2,2,2,2" >
                      
                         <Grid.BitmapEffect>
-                            <DropShadowBitmapEffect Color="Black" Direction="270"/>
+                            <DropShadowBitmapEffect Color="LightSteelBlue" Direction="280"/>
                         </Grid.BitmapEffect>                        
                         
                         <Grid.RowDefinitions>
@@ -159,9 +171,12 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
 
-                        <StackPanel Grid.Row="0" Grid.Column="1" Margin="2,0,2,0">
+                        <StackPanel Grid.Row="0" Grid.Column="0" Margin="2,0,2,0">
                             <TextBlock Text="TipoDocumento" />
 
                             <ComboBox   Margin="2,0,2,0" HorizontalAlignment="Stretch" Tag="EnterAsTab" 
@@ -173,22 +188,22 @@
 
                         </StackPanel>
 
-                        <StackPanel Grid.Row="0" Grid.Column="0" Margin="2,0,2,0">
-                            <TextBlock Text="Divisa" />
-                            <TextBox   Text="{Binding CurrentPoco.Divisa, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" HorizontalAlignment="Stretch" />
-                        </StackPanel>
-
-                        <StackPanel Grid.Row="1" Grid.Column="0" Margin="2,0,2,0">
+                        <StackPanel Grid.Row="0" Grid.Column="1" Margin="2,0,2,0">
                             <TextBlock Text="Numero" />
-                            <TextBox   Text="{Binding CurrentPoco.Numero, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                            <TextBox   Text="{Binding CurrentPoco.Numero, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch"  />
                         </StackPanel>
 
-                        <StackPanel Grid.Row="2" Grid.Column="1" Margin="2,0,2,0">
+                        <StackPanel Grid.Row="0" Grid.Column="2" Margin="2,0,2,0">
                             <TextBlock Text="Data" />
                             <DatePicker SelectedDate="{Binding CurrentPoco.Data}"/>
                         </StackPanel>
-
-                        <StackPanel Grid.Row="3" Grid.Column="0" Margin="2,0,2,0">
+                        
+                        <StackPanel Grid.Row="1" Grid.Column="0" Margin="2,0,2,0">
+                            <TextBlock Text="Divisa" />
+                            <TextBox   Text="{Binding CurrentPoco.Divisa, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" HorizontalAlignment="Stretch" />
+                        </StackPanel>
+                        
+                        <StackPanel Grid.Row="1" Grid.Column="1" Margin="2,0,2,0">
                             <TextBlock Text="Totale documento" />
                             <TextBox   Text="{Binding CurrentPoco.ImportoTotaleDocumento, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" HorizontalAlignment="Stretch" />
                         </StackPanel>
@@ -198,18 +213,21 @@
                 
                 <TabItem Header="Dati bollo">
                     <Grid Margin="2,2,2,2">
+                        <Grid.BitmapEffect>
+                            <DropShadowBitmapEffect Color="LightSteelBlue" Direction="270"/>
+                        </Grid.BitmapEffect>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="45" />
                             <RowDefinition Height="45" />
                         </Grid.RowDefinitions>
 
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
 
-                        <StackPanel Grid.Row="0" Grid.Column="1" Margin="2,0,2,0">
-                            <TextBlock Text="TipoDocumento" />
+                        <StackPanel Grid.Row="0" Grid.Column="0" Margin="2,0,2,0" Width="Auto" HorizontalAlignment="Left">
+                            <TextBlock Text="Bollo virtuale" />
 
                             <ComboBox   Margin="2,0,2,0" HorizontalAlignment="Stretch" Tag="EnterAsTab" 
                                                     ItemsSource="{Binding Source={utils:Enumeration {x:Type enums:BolloVirtualeType}}, UpdateSourceTrigger=PropertyChanged}"  
@@ -220,9 +238,9 @@
 
                         </StackPanel>
 
-                        <StackPanel  Grid.Row="1" Grid.Column="0" Margin="2,0,2,0">
-                            <TextBlock Text="Tipo" />
-                            <TextBox   Text="{Binding CurrentPoco.DatiBollo.TipoCassa, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" Margin="2,0,2,0"/>
+                        <StackPanel  Grid.Row="0" Grid.Column="1" Margin="2,0,2,0" Width="Auto"  HorizontalAlignment="Left" MinWidth="200">
+                            <TextBlock Text="Importo" />
+                            <TextBox   Text="{Binding CurrentPoco.DatiBollo.ImportoBollo, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" Margin="2,0,2,0"/>
                         </StackPanel>
                         
                         
@@ -231,6 +249,9 @@
                 
                 <TabItem Header="Dati ritenuta">
                     <Grid Margin="2,2,2,2">
+                        <Grid.BitmapEffect>
+                            <DropShadowBitmapEffect Color="LightSteelBlue" Direction="270"/>
+                        </Grid.BitmapEffect>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="45" />
                             <RowDefinition Height="45" />
@@ -270,6 +291,9 @@
                 
                 <TabItem Header="Dati cassa prev.">
                     <Grid Margin="2,2,2,2">
+                        <Grid.BitmapEffect>
+                            <DropShadowBitmapEffect Color="LightSteelBlue" Direction="270"/>
+                        </Grid.BitmapEffect>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="45" />
                             <RowDefinition Height="45" />
@@ -308,7 +332,7 @@
                     </Grid>
                 </TabItem>
                 
-                <TabItem Header="Sconto maggiorazione">
+                <TabItem Header="Sconto/Magg.ne">
 
                 </TabItem>
             </TabControl>
