--- a/FaPA/GUI/Design/Templates/DatiGeneraliDocumento.xaml
+++ b/FaPA/GUI/Design/Templates/DatiGeneraliDocumento.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:utils="clr-namespace:FaPA.GUI.Utils"
-             xmlns:enums="clr-namespace:FaPA.Core.FaPa">
+             xmlns:enums="clr-namespace:FaPA.Core.FaPa"
+             xmlns:myRecordNavigator="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator">
     
     <UserControl.Resources>
 
@@ -48,11 +49,11 @@
                             </Grid.RowDefinitions>
                             <Border x:Name="Border"  Margin="0,0,-1,0" Background="#ededed">
                                 <ContentPresenter x:Name="ContentSite"
-                                          VerticalAlignment="Center"
-                                          HorizontalAlignment="Center"
-                                          ContentSource="Header"
-                                          Margin="30,10,30,4"
-                                          RecognizesAccessKey="True" />
+                                                  VerticalAlignment="Center"
+                                                  HorizontalAlignment="Center"
+                                                  ContentSource="Header"
+                                                  Margin="30,10,30,4"
+                                                  RecognizesAccessKey="True" />
                             </Border>
                             <Border Grid.Column="1" Margin="0,10,0,4" Background="#d6d6d6" />
 
@@ -96,20 +97,20 @@
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
                             <TabPanel x:Name="HeaderPanel"
-                              Grid.Row="0"
-                              Panel.ZIndex="1"
-                              Margin="0,0,4,-1"
-                              IsItemsHost="True"
-                              KeyboardNavigation.TabIndex="1"
-                              Background="Transparent" />
+                                      Grid.Row="0"
+                                      Panel.ZIndex="1"
+                                      Margin="0,0,4,-1"
+                                      IsItemsHost="True"
+                                      KeyboardNavigation.TabIndex="1"
+                                      Background="Transparent" />
                             <Border x:Name="Border"
-                            Grid.Row="1"
-                            BorderThickness="2"
-                            CornerRadius="2"
-                            KeyboardNavigation.TabNavigation="Local"
-                            KeyboardNavigation.DirectionalNavigation="Contained"
-                            KeyboardNavigation.TabIndex="2"
-                            BorderBrush="LightGray">
+                                    Grid.Row="1"
+                                    BorderThickness="2"
+                                    CornerRadius="2"
+                                    KeyboardNavigation.TabNavigation="Local"
+                                    KeyboardNavigation.DirectionalNavigation="Contained"
+                                    KeyboardNavigation.TabIndex="2"
+                                    BorderBrush="LightGray">
                                 <ContentPresenter x:Name="PART_SelectedContentHost" Margin="4" ContentSource="SelectedContent" />
                             </Border>
                         </Grid>
@@ -141,8 +142,7 @@
         </StackPanel>-->
 
         <GroupBox Grid.Row="0" Header="Dati generali documento " Padding="4,4,4,4" Margin="4,4,4,4"
-                  FontSize="12" FontWeight="Bold"
-                  Visibility="{Binding ElementName=infoPanel, Path=Visibility, Converter={StaticResource InvertVisibilityConverter}}" >
+                  FontSize="12" FontWeight="Bold">
 
             <TabControl TabStripPlacement="Top" >
 
@@ -154,7 +154,6 @@
                 </TabControl.Background>-->
                 
                 <TabItem Header="Dati generali" >
-
                     <Grid Margin="2,2,2,2" >
                      
                         <Grid.BitmapEffect>
@@ -333,64 +332,91 @@
                 </TabItem>
                 
                 <TabItem Header="Sconto/Magg.ne">
+                    <Grid utils:FocusAdvancement.AdvancesByEnterKey="True">
 
+                        <Grid.BitmapEffect>
+                            <DropShadowBitmapEffect Color="LightSteelBlue" Direction="280"/>
+                        </Grid.BitmapEffect>
+
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <DockPanel Grid.Row="0" 
+                                   Visibility="{Binding Path=ScontoMaggiorazioneGeneraleView.IsEmpty, Converter={StaticResource BoolToVisibilityConverter},Mode=OneWay}">
+
+                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,15,0,0"> 
+                                <Hyperlink FontSize="14" Command="{Binding ScontoMaggiorazioneGeneraleView.AddItemCommand}">
+                                    <Run Text="Inserisci un nuovo elemento sconto maggiorazione" />
+                                </Hyperlink>
+                            </TextBlock>
+
+                        </DockPanel>                        
+
+                        <Grid  Grid.Row="1" Grid.Column="0" DataContext="{Binding ScontoMaggiorazioneGeneraleView}"
+                                Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="14"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition MaxWidth="80"/>
+                                <ColumnDefinition MaxWidth="80"/>
+                                <ColumnDefinition MaxWidth="80"/>
+                            </Grid.ColumnDefinitions>
+
+                            <StackPanel Grid.Row="1" Grid.Column="0"  Margin="2,0,2,0">
+                                <TextBlock Text="Sconto magg." />
+                                <!--TextSearch.TextPath="Description" DisplayMemberPath="Description"-->
+                                <ComboBox Tag="EnterAsTab"
+						                      HorizontalAlignment="Stretch"
+                                              IsEditable="true"
+                                              IsTextSearchEnabled="True"
+                                              TextSearch.TextPath="Value"
+                                              SelectedValuePath="Value"
+						                      ItemsSource="{Binding Source={utils:Enumeration {x:Type enums:TipoScontoMaggiorazioneType}}}"
+                                              SelectedValue="{Binding CurrentPoco.Tipo,  Mode=TwoWay, 
+                                                                      UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                                              DisplayMemberPath="Value" />
+                            </StackPanel>
+
+                            <StackPanel Grid.Row="1" Grid.Column="1" >
+                                <TextBlock Text="Percentuale" />
+                                <TextBox   Text="{Binding CurrentPoco.Percentuale, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True, NotifyOnValidationError=True}" 
+                                           HorizontalAlignment="Stretch" MaxLength="5"/>
+                            </StackPanel>
+
+                            <StackPanel Grid.Row="1" Grid.Column="2">
+                                <TextBlock Text="Importo" />
+                                <TextBox   Text="{Binding CurrentPoco.Importo, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True, NotifyOnValidationError=True}" 
+                                           MaxLength="10" HorizontalAlignment="Stretch"/>
+                            </StackPanel>
+
+                            <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
+                                    Height="Auto"  Margin="2,5,2,2" 
+                                    Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}">
+
+                                <Border Margin="2,2,2,2" Padding="2,5,4,4" Height="32"
+                                     Visibility="{Binding Path=UserCollectionView.IsEmpty, Mode=OneWay, 
+                                     Converter={StaticResource BoolToOppositeVisibilityConverter}}">
+
+                                    <myRecordNavigator:MyRecordNavigator ItemsSource="{Binding UserCollectionView}"/>
+                                </Border>
+
+
+                            </StackPanel>
+
+                        </Grid>
+                    </Grid>
                 </TabItem>
             </TabControl>
 
-
         </GroupBox>
+        
 
-        <!--<GroupBox Grid.Row="1" Header="Cassa previdenziale"
-                  Visibility="{Binding ElementName=infoPanel, Path=Visibility, Converter={StaticResource InvertVisibilityConverter}}">
-
-            <Grid Margin="2,2,2,2">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="45" />
-                    <RowDefinition Height="45" />
-                    <RowDefinition Height="45" />
-                </Grid.RowDefinitions>
-
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-
-                <StackPanel  Grid.Row="0" Grid.Column="0" Margin="2,0,2,0">
-                    <TextBlock Text="Tipo" />
-                    <TextBox   Text="{Binding CurrentPoco.TipoCassa, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" Margin="2,0,2,0"/>
-                </StackPanel>
-
-                <StackPanel  Grid.Row="0" Grid.Column="1" Margin="2,0,2,0">
-                    <TextBlock Text="Aliquota" />
-                    <TextBox   Text="{Binding CurrentPoco.AlCassa, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch"/>
-                </StackPanel>
-
-                <StackPanel Grid.Row="1" Grid.Column="0" Margin="2,0,2,0">
-                    <TextBlock Text="Contributo" />
-                    <TextBox   Text="{Binding CurrentPoco.ImportoContributoCassa, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
-                </StackPanel>
-
-                <StackPanel Grid.Row="1" Grid.Column="1" Margin="2,0,2,0">
-                    <TextBlock Text="Imponibile" />
-                    <TextBox   Text="{Binding CurrentPoco.ImponibileCassa, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
-                </StackPanel>
-
-                <StackPanel Grid.Row="2" Grid.Column="0" Margin="2,0,2,0">
-                    <TextBlock Text="Aliquota" />
-                    <TextBox   Text="{Binding CurrentPoco.AliquotaIVA, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
-                </StackPanel>
-            </Grid>
-
-        </GroupBox>-->
-
-        <StackPanel Orientation="Vertical" Grid.Row="2" Height="Auto"  Margin="2,2,2,2" 
-                    utils:FocusAdvancement.AdvancesByEnterKey="True"
-                    Visibility="{Binding ElementName=infoPanel, Path=Visibility, Converter={StaticResource InvertVisibilityConverter}}">
-
-            <!--<StackPanel.InputBindings>
-                <KeyBinding Key="Enter" Modifiers="Ctrl" Command="{Binding EnterKey}" />
-                <KeyBinding Key="F9"  Command="{Binding SearchOnSite}" />
-            </StackPanel.InputBindings>-->
+        <StackPanel Orientation="Vertical" Grid.Row="2" Height="Auto"  Margin="2,2,2,2" >
 
             <DockPanel Height="25" Margin="2,2,2,2" Background="{StaticResource Brush_ToolBar}">
 
