--- a/FaPA/GUI/Design/Templates/Fattura.xaml
+++ b/FaPA/GUI/Design/Templates/Fattura.xaml
@@ -9,9 +9,9 @@
 
     <Border Margin="2,2,2,2" Padding="4,4,4,4" Style="{StaticResource MainBorderStyle}">
     <Grid>
-            <Grid.BitmapEffect>
-                <DropShadowBitmapEffect Color="LightSteelBlue" Direction="280"/>
-            </Grid.BitmapEffect>
+            <Grid.Effect>
+                <DropShadowEffect Color="LightSteelBlue" Direction="280"/>
+            </Grid.Effect>
         
         <Grid.RowDefinitions>
                 <RowDefinition Height="40" />
