--- a/FaPA/GUI/Design/Templates/DatiDocumento.xaml
+++ b/FaPA/GUI/Design/Templates/DatiDocumento.xaml
@@ -1,125 +1,10 @@
-﻿<UserControl x:Class="FaPA.GUI.Design.Templates.DatiGeneraliDocumento"
+﻿<UserControl x:Class="FaPA.GUI.Design.Templates.DatiDocumento"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:utils="clr-namespace:FaPA.GUI.Utils"
              xmlns:enums="clr-namespace:FaPA.Core.FaPa"
              xmlns:myRecordNavigator="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator">
     
-    <UserControl.Resources>
-
-        <Style x:Key="MyFocusVisualStyte" >
-            <Setter Property="Control.Template">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <Border x:Name="FocusStyle" Background="#4433b4ed" />
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style TargetType="{x:Type TabItem}">
-            <Setter Property="FontSize" Value="12"/>
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="Foreground" Value="#FF474747"/>
-            <Setter Property="FocusVisualStyle" Value="{StaticResource MyFocusVisualStyte}" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type TabItem}">
-                        <ControlTemplate.Resources>
-                            <Storyboard x:Key="StartAction">
-                                <DoubleAnimation Storyboard.TargetName="Border1Highlited" Storyboard.TargetProperty="(UIElement.Opacity)" From="0" To="1" Duration="0:0:0.5"/>
-                                <DoubleAnimation Storyboard.TargetName="Border2Highlited" Storyboard.TargetProperty="(UIElement.Opacity)" From="0" To="1" Duration="0:0:0.5"/>
-                            </Storyboard>
-
-                            <Storyboard x:Key="ExitAction">
-                                <DoubleAnimation Storyboard.TargetName="Border1Highlited" Storyboard.TargetProperty="Opacity" From="1" To="0" Duration="0:0:0.3" />
-                                <DoubleAnimation Storyboard.TargetName="Border2Highlited" Storyboard.TargetProperty="Opacity" From="1" To="0" Duration="0:0:0.3" />
-                            </Storyboard>
-                        </ControlTemplate.Resources>
-
-                        <Grid x:Name="Root">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="1" />
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="6" />
-                                <RowDefinition Height="2" />
-                            </Grid.RowDefinitions>
-                            <Border x:Name="Border"  Margin="0,0,-1,0" Background="#ededed">
-                                <ContentPresenter x:Name="ContentSite"
-                                                  VerticalAlignment="Center"
-                                                  HorizontalAlignment="Center"
-                                                  ContentSource="Header"
-                                                  Margin="30,10,30,4"
-                                                  RecognizesAccessKey="True" />
-                            </Border>
-                            <Border Grid.Column="1" Margin="0,10,0,4" Background="#d6d6d6" />
-
-                            <Border Grid.Row="1" Grid.ColumnSpan="2" Background="#ededed"/>
-                            <Border Grid.Row="1" Grid.ColumnSpan="2" Name="Border1Highlited" Background="Transparent"/>
-
-                            <Border Grid.Row="2" Grid.ColumnSpan="2" Background="#c9c9c9"/>
-                            <Border Grid.Row="2" Grid.ColumnSpan="2" Name="Border2Highlited" Background="Transparent"/>
-
-                        </Grid>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsSelected" Value="True">
-                                <Setter Property="Panel.ZIndex" Value="100" />
-                                <Setter TargetName="Border1Highlited" Property="Background" Value="#33b4ed" />
-                                <Setter TargetName="Border2Highlited" Property="Background" Value="#009de2" />
-                                <Trigger.EnterActions>
-                                    <BeginStoryboard Storyboard="{StaticResource StartAction}"/>
-                                </Trigger.EnterActions>
-                                <Trigger.ExitActions>
-                                    <BeginStoryboard Storyboard="{StaticResource ExitAction}"/>
-                                </Trigger.ExitActions>
-                            </Trigger>
-                            <Trigger Property="IsEnabled" Value="False">
-                                <Setter Property="Foreground" Value="#cccccc" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style TargetType="{x:Type TabControl}">
-            <Setter Property="OverridesDefaultStyle" Value="True" />
-            <Setter Property="SnapsToDevicePixels" Value="True" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type TabControl}">
-                        <Grid KeyboardNavigation.TabNavigation="Local">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="*" />
-                            </Grid.RowDefinitions>
-                            <TabPanel x:Name="HeaderPanel"
-                                      Grid.Row="0"
-                                      Panel.ZIndex="1"
-                                      Margin="0,0,4,-1"
-                                      IsItemsHost="True"
-                                      KeyboardNavigation.TabIndex="1"
-                                      Background="Transparent" />
-                            <Border x:Name="Border"
-                                    Grid.Row="1"
-                                    BorderThickness="2"
-                                    CornerRadius="2"
-                                    KeyboardNavigation.TabNavigation="Local"
-                                    KeyboardNavigation.DirectionalNavigation="Contained"
-                                    KeyboardNavigation.TabIndex="2"
-                                    BorderBrush="LightGray">
-                                <ContentPresenter x:Name="PART_SelectedContentHost" Margin="4" ContentSource="SelectedContent" />
-                            </Border>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </UserControl.Resources>
-
     <Grid Margin="2,2,2,2">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -144,7 +29,7 @@
         <GroupBox Grid.Row="0" Header="Dati generali documento " Padding="4,4,4,4" Margin="4,4,4,4"
                   FontSize="12" FontWeight="Bold">
 
-            <TabControl TabStripPlacement="Top" >
+            <TabControl TabStripPlacement="Top" Style="{StaticResource SubTabControlStyle}">
 
                 <!--<TabControl.Background>
                     <RadialGradientBrush Center="-0.047,0.553" GradientOrigin="-0.047,0.553" RadiusY="1.231" RadiusX="0.8">
@@ -152,13 +37,13 @@
                         <GradientStop Color="#14FFFFFF"/>
                     </RadialGradientBrush>
                 </TabControl.Background>-->
-                
-                <TabItem Header="Dati generali" >
+
+                <TabItem Header="Dati generali" Style="{StaticResource SubTabItemStyle}">
                     <Grid Margin="2,2,2,2" >
                      
-                        <Grid.BitmapEffect>
-                            <DropShadowBitmapEffect Color="LightSteelBlue" Direction="280"/>
-                        </Grid.BitmapEffect>                        
+                        <Grid.Effect>
+                            <DropShadowEffect Color="LightSteelBlue" Direction="280"/>
+                        </Grid.Effect>                        
                         
                         <Grid.RowDefinitions>
                             <RowDefinition Height="45" />
@@ -209,12 +94,12 @@
 
                     </Grid>                   
                 </TabItem>
-                
-                <TabItem Header="Dati bollo">
+
+                <TabItem Header="Dati bollo" Style="{StaticResource SubTabItemStyle}">
                     <Grid Margin="2,2,2,2">
-                        <Grid.BitmapEffect>
-                            <DropShadowBitmapEffect Color="LightSteelBlue" Direction="270"/>
-                        </Grid.BitmapEffect>
+                        <Grid.Effect>
+                            <DropShadowEffect Color="LightSteelBlue" Direction="270"/>
+                        </Grid.Effect>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="45" />
                             <RowDefinition Height="45" />
@@ -245,12 +130,12 @@
                         
                     </Grid>                    
                 </TabItem>
-                
-                <TabItem Header="Dati ritenuta">
+
+                <TabItem Header="Dati ritenuta" Style="{StaticResource SubTabItemStyle}">
                     <Grid Margin="2,2,2,2">
-                        <Grid.BitmapEffect>
-                            <DropShadowBitmapEffect Color="LightSteelBlue" Direction="270"/>
-                        </Grid.BitmapEffect>
+                        <Grid.Effect>
+                            <DropShadowEffect Color="LightSteelBlue" Direction="270"/>
+                        </Grid.Effect>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="45" />
                             <RowDefinition Height="45" />
@@ -287,12 +172,12 @@
 
                     </Grid>
                 </TabItem>
-                
-                <TabItem Header="Dati cassa prev.">
+
+                <TabItem Header="Dati cassa prev." Style="{StaticResource SubTabItemStyle}">
                     <Grid Margin="2,2,2,2">
-                        <Grid.BitmapEffect>
-                            <DropShadowBitmapEffect Color="LightSteelBlue" Direction="270"/>
-                        </Grid.BitmapEffect>
+                        <Grid.Effect>
+                            <DropShadowEffect Color="LightSteelBlue" Direction="270"/>
+                        </Grid.Effect>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="45" />
                             <RowDefinition Height="45" />
@@ -330,13 +215,13 @@
                         </StackPanel>
                     </Grid>
                 </TabItem>
-                
-                <TabItem Header="Sconto/Magg.ne">
+
+                <TabItem Header="Sconto/Magg.ne" Style="{StaticResource SubTabItemStyle}">
                     <Grid utils:FocusAdvancement.AdvancesByEnterKey="True">
 
-                        <Grid.BitmapEffect>
-                            <DropShadowBitmapEffect Color="LightSteelBlue" Direction="280"/>
-                        </Grid.BitmapEffect>
+                        <Grid.Effect>
+                            <DropShadowEffect Color="LightSteelBlue" Direction="280"/>
+                        </Grid.Effect>
 
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -379,7 +264,7 @@
 						                      ItemsSource="{Binding Source={utils:Enumeration {x:Type enums:TipoScontoMaggiorazioneType}}}"
                                               SelectedValue="{Binding CurrentPoco.Tipo,  Mode=TwoWay, 
                                                                       UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                                              DisplayMemberPath="Value" />
+                                              DisplayMemberPath="Description" />
                             </StackPanel>
 
                             <StackPanel Grid.Row="1" Grid.Column="1" >
@@ -394,17 +279,30 @@
                                            MaxLength="10" HorizontalAlignment="Stretch"/>
                             </StackPanel>
 
-                            <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
-                                    Height="Auto"  Margin="2,5,2,2" 
+                            <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3"
+                                    Height="Auto"  Margin="1,10,1,1" Background="Gainsboro"
                                     Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}">
 
-                                <Border Margin="2,2,2,2" Padding="2,5,4,4" Height="32"
+                                <Border Margin="1,1,1,1" Padding="2,5,4,4" Height="32"
                                      Visibility="{Binding Path=UserCollectionView.IsEmpty, Mode=OneWay, 
                                      Converter={StaticResource BoolToOppositeVisibilityConverter}}">
 
                                     <myRecordNavigator:MyRecordNavigator ItemsSource="{Binding UserCollectionView}"/>
                                 </Border>
 
+                                <Button VerticalAlignment="Center" Width="Auto" Height="25" HorizontalAlignment="Left" Margin="2,0,0,0"
+                                        Command="{Binding Path=AddItemCommand}">
+
+                                    <Image Source="/GUI/Design/Styles/Images/1343547225_file_add.png" Width="25"/>
+                                
+                                </Button>
+
+                                <Button Command="{Binding Path=DeleteEntityCommand}"
+                                        Width="Auto" Height="25" HorizontalAlignment="Left" Margin="2,0,0,0">
+
+                                    <Image Source="/GUI/Design/Styles/Images/delete(1).png" Width="25"/>
+
+                                </Button>
 
                             </StackPanel>
 
